--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
     "next": "12.0.4",
@@ -19,6 +20,10 @@
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-order-config-standard": "^0.1.3",
     "typescript": "^4.5.2"
   }
 }
