--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
